--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "rustdtp"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
+license = "MIT"
+description = "A cross platform networking library written in Rust."
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
