--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustdtp"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
 license = "MIT"
 description = "Cross-platform networking interfaces for Rust."
@@ -10,3 +10,6 @@ include = ["src/**/*", "LICENSE", "README.md"]
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1.19.2", features = ["full"] }
+serde = "1.0"
+serde_json = "1.0"
