--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ edition = "2021"
 tokio = { version = "1.19.2", features = ["full"] }
 serde = "1.0"
 serde_json = "1.0"
+
+[dev-dependencies]
+tokio-test = "0.4.2"
+rand = "0.8.5"
