--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rustdtp"
 version = "0.2.0"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
 license = "MIT"
-description = "Cross-platform networking interfaces for Rust."
+description = "Asynchronous cross-platform networking interfaces for Rust."
 repository = "https://github.com/WKHAllen/rustdtp"
 keywords = ["socket", "networking"]
 include = ["src/**/*", "LICENSE", "README.md"]
