--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 tokio = { version = "1.19.2", features = ["full"] }
 serde = "1.0"
 serde_json = "1.0"
-
-[dev-dependencies]
 rand = "0.8.5"
+rsa = "0.6.1"
+aes-gcm = "0.9.4"
+sha2 = "0.10.2"
