--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustdtp"
-version = "0.3.2"
+version = "0.3.3"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
 license = "MIT"
 description = "Asynchronous cross-platform networking interfaces for Rust."
@@ -13,7 +13,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.19.2", features = ["full"] }
 tokio-stream = "0.1.9"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
 rsa = "0.6.1"
