--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustdtp"
-version = "0.3.3"
+version = "0.4.0"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
 license = "MIT"
 description = "Asynchronous cross-platform networking interfaces for Rust."
@@ -11,11 +11,20 @@ include = ["src/**/*", "LICENSE", "README.md"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.26", features = ["full"] }
-tokio-stream = "0.1"
+tokio = { version = "1.26", features = ["full"], optional = true }
+tokio-stream = { version = "0.1", optional = true }
+async-std = { version = "1.12.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
 rsa = "0.7.2"
 aes-gcm = "0.10.1"
 sha2 = "0.10.6"
+
+[dev-dependencies]
+rustdtp = { path = ".", features = ["rt-tokio", "rt-async-std", "rt-std"] }
+
+[features]
+rt-tokio = ["dep:tokio", "dep:tokio-stream"]
+rt-async-std = ["dep:async-std"]
+rt-std = []
