--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "rustdtp"
 version = "0.4.0"
 authors = ["WKHAllen <wkhallen@gmail.com>"]
 license = "MIT"
-description = "Asynchronous cross-platform networking interfaces for Rust."
+description = "Cross-platform networking interfaces for Rust."
 repository = "https://github.com/WKHAllen/rustdtp"
 homepage = "https://wkhallen.com/dtp/"
-keywords = ["socket", "networking"]
+keywords = ["socket", "networking", "io", "async"]
 include = ["src/**/*", "LICENSE", "README.md"]
 edition = "2021"
 
