--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,21 +11,11 @@ include = ["src/**/*", "LICENSE", "README.md"]
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.26", features = ["full"], optional = true }
-tokio-stream = { version = "0.1", optional = true }
-async-std = { version = "1.12.0", features = ["attributes"], optional = true }
-futures = { version = "0.3", optional = true }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+aes-gcm = "0.10.1"
 rand = "0.8.5"
 rsa = "0.7.2"
-aes-gcm = "0.10.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sha2 = "0.10.6"
-
-[dev-dependencies]
-rustdtp = { path = ".", features = ["rt-tokio", "rt-async-std", "rt-sync"] }
-
-[features]
-rt-tokio = ["dep:tokio", "dep:tokio-stream"]
-rt-async-std = ["dep:async-std", "dep:futures"]
-rt-sync = []
+tokio = { version = "1.26", features = ["full"] }
+tokio-stream = { version = "0.1" }
