--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Build
         run: cargo build --verbose
-      - name: Run tests
+
+      - name: Test
         run: cargo test --verbose -- --nocapture
+
+      - name: Lint
+        run: cargo clippy --verbose -- -D warnings
