--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 [dependencies]
 aes-gcm = "0.10.3"
 async-trait = "0.1.76"
+futures = "0.3"
 rand = "0.8.5"
 rsa = { version = "0.9.6", features = ["sha2"] }
 serde = { version = "1.0", features = ["derive"] }
