--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Cross-platform networking interfaces for Rust."
 repository = "https://github.com/WKHAllen/rustdtp"
 homepage = "https://wkhallen.com/dtp/"
 keywords = ["socket", "networking", "io", "async"]
+categories = ["network-programming", "asynchronous"]
 include = ["src/**/*", "LICENSE", "README.md"]
 edition = "2021"
 rust-version = "1.75"
