--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ edition = "2021"
 rust-version = "1.75"
 
 [dependencies]
-aes-gcm = "0.10"
+aes-gcm = { version = "0.10", features = ["std"] }
 futures = "0.3"
 rand = "0.8"
 rsa = { version = "0.9", features = ["sha2"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
+thiserror = "2.0"
 tokio = { version = "1.43", features = ["full"] }
